--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
     	<version>1.4</version>
 	</dependency>
 	
+	<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+	</dependency>
+	
 	    
   </dependencies>
 </project>
