--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
     <version>2.6</version>
 	</dependency>
 	
+		<dependency>
+			<groupId>com.relevantcodes</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>2.41.2</version>
+		</dependency>
 	    
   </dependencies>
 </project>
