--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
-        <version>3.141.59</version>
+        <version>3.141.5</version>
     </dependency>
     
 	<dependency>
@@ -76,6 +76,14 @@
 			<artifactId>extentreports</artifactId>
 			<version>2.41.2</version>
 		</dependency>
-	    
-  </dependencies>
+		
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.13.1</version>
+</dependency>
+
+		
+	</dependencies>
 </project>
